--- a/src/Pages/DoctorDetail.css
+++ b/src/Pages/DoctorDetail.css
@@ -1,5 +1,4 @@
 .doctor-detail-container {
-  padding: 20px;
   background: #f9f9f9;
   font-family: Arial, sans-serif;
 }
@@ -19,17 +18,26 @@
   background: white;
   border-radius: 8px;
   padding: 20px;
-  box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
+  /* box-shadow: 0px 2px 6px rgba(0,0,0,0.1); */
 }
 
 .doctor-info {
+  display: flex;
   flex: 1;
   max-width: 50%;
 }
 
+.doctor-info p {
+  display: inline-flex;   /* keeps text inline */
+  align-items: center;    /* vertically align */
+  margin: 0 10px 0 0;     /* small spacing */
+  margin-bottom: 8px;
+
+}
+
 .doctor-photo {
-  width: 90px;
-  height: 90px;
+  width: 170px;
+  height: 170px;
   border-radius: 50%;
   margin-bottom: 10px;
 }
