--- a/src/Pages/DoctorDetail.css
+++ b/src/Pages/DoctorDetail.css
@@ -1,5 +1,5 @@
 .doctor-detail-container {
-  background: #f9f9f9;
+  /* background: #f9f9f9; */
   font-family: Arial, sans-serif;
 }
 
@@ -28,11 +28,10 @@
 }
 
 .doctor-info p {
-  display: inline-flex;   /* keeps text inline */
-  align-items: center;    /* vertically align */
-  margin: 0 10px 0 0;     /* small spacing */
+  display: inline-flex; /* keeps text inline */
+  align-items: center; /* vertically align */
+  margin: 0 10px 0 0; /* small spacing */
   margin-bottom: 8px;
-
 }
 
 .doctor-photo {
@@ -43,6 +42,7 @@
 }
 
 .doctor-name {
+  margin-top: 1.8vw;
   font-size: 20px;
   margin-bottom: 10px;
   color: #2f3a5f;
@@ -109,8 +109,112 @@
 
 .doc-placeholder {
   width: 80%;
-  height: 300px;
+  height: 500px;
   margin: 0 auto;
   background: #b3eaff;
   border-radius: 6px;
+}
+.reg-placeholder {
+  background-color: #f2fbf9;
+  width: 80%;
+  height: 500px;
+  margin: 0 auto;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center; /* center horizontally */
+  align-items: center; /* center vertically */
+}
+.reg-btn {
+  width: 80px;
+  height: 80px;
+  border-radius: 13px;
+  background-color: #0fc1a7;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+}
+
+.reg-btn i {
+  font-size: 32px; /* make icon bigger */
+  color: white; /* contrast color */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+}
+/* doctor-profile */
+.dr-profile-action-buttons{
+    display: flex;
+  flex-direction: column; /* stack vertically */
+  align-items: center; /* center horizontally */
+  justify-content: center;
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.action-txt {
+  font-size: 1rem;
+  font-weight: normal;
+  color: #253159;
+  margin-bottom: 1rem;
+}
+
+.action-btn-row {
+  display: flex;
+  gap: 1rem;
+}
+
+.disable-btn {
+  background: #dd3666;
+  border-radius: 77px;
+  padding: 15.5px 56px;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.reenable-btn {
+  background: #00cc84;
+  border-radius: 77px;
+  padding: 15.5px 56px;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.disable-btn:hover {
+  background: #B70E3F;
+}
+
+.reenable-btn:hover {
+  background: #00AD70;
+}
+/* doctor Status */
+.profile-img-wrapper {
+  position: relative;
+  display: inline-block;
+}
+.profile-img {
+  margin-top: -5vw;
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  object-fit: cover;
+  /* border: 3px solid #e0e0e0; */
+}
+/* Green active indicator */
+.active-status {
+  position: absolute;
+  bottom: 2px; /* You can change to top: 8px; if you want top-right */
+  right: 8px;
+  width: 18px;
+  height: 18px;
+  background-color: #2ecc71; /* Green circle */
+  border: 2px solid #fff; /* White border for clean look */
+  border-radius: 50%;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
 }
