--- a/src/Pages/DoctorDetail.css
+++ b/src/Pages/DoctorDetail.css
@@ -17,14 +17,21 @@
   justify-content: space-between;
   background: white;
   border-radius: 8px;
-  padding: 20px;
+  padding: 30px;
   /* box-shadow: 0px 2px 6px rgba(0,0,0,0.1); */
 }
 
-.doctor-info {
+/* .doctor-info {
   display: flex;
   flex: 1;
   max-width: 50%;
+} */
+
+.doctor-info {
+  display: flex;
+  align-items: flex-start; /* Align items from the top */
+  gap: 20px; /* Space between image and details */
+  margin-top: 20px;
 }
 
 .doctor-info p {
@@ -197,6 +204,13 @@
 .profile-img-wrapper {
   position: relative;
   display: inline-block;
+}
+.doc-profile-img {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  object-fit: cover;
+  /* border: 3px solid #e0e0e0; */
 }
 .profile-img {
   margin-top: -5vw;
