--- a/src/Pages/LoginPage.css
+++ b/src/Pages/LoginPage.css
@@ -1309,3 +1309,14 @@ cursor: pointer;
     width: 55%;
   }
 }
+@media (max-width: 1200px) {
+  .form-card {
+        width: 20rem;
+  }
+}
+  @media (max-width: 575px) {
+  .login {
+      justify-content: center;
+  }
+
+}
